--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://suwaan2.github.io/Portfolio",
+  "homepage": "https://suwaan2.github.io/myPortfolio",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
